fixed some overflow issues

--- a/assets/header.css
+++ b/assets/header.css
@@ -30,7 +30,8 @@ header.site-header, footer {
     z-index: 10;
     box-sizing: border-box;
     flex-shrink: 0;
-    max-width: 100vw;
+    max-width: 100%;
+    overflow-x: hidden;
 
     p {
         margin: 0;
