--- a/assets/styles.css
+++ b/assets/styles.css
@@ -13,13 +13,13 @@ body, html {
     margin-top: 0em;
     margin-left: 25%;
     margin-right: 25%;
-    padding: 1em;
+    padding: 1rem;
     background-color: white;
     font-size: 1.2em;
 }
 
 .page-content {
-    padding: 1em;
+    padding: 1rem;
 }
 
 .post-title {
@@ -51,14 +51,14 @@ body, html {
 
     h1 {
         font-size: 1.5em;
-        padding-bottom: 1em;
+        padding-bottom: 1rem;
         margin: 0;
     }
     #controls {
         display: flex;
         flex-direction: row;
         flex-wrap: wrap;
-        gap: 1em;
+        gap: 1rem;
         font-family: formiga, sans-serif;
         font-size: 1em;
 
@@ -68,18 +68,18 @@ body, html {
             font-size: 1.5em;
             border: none;
             background-color:rgb(231, 231, 231);
-            height: 2em;
+            
         }
 
         h2 {
-            font-size: 1.2em;
+            font-size: 1.1em;
         }
 
         div {
             display: flex;
             flex-direction: row;
             align-items: center;
-            gap: 0.5em;
+            gap: 0.5rem;
         }
     }
 }
@@ -95,7 +95,7 @@ body, html {
 
     #pi-approx {
         #approximation {
-            font-size: 9vw;
+            font-size: 8vw;
         }
     }
 }
@@ -113,7 +113,7 @@ body, html {
 
     #pi-approx {
         #approximation {
-            font-size: 8vw;
+            font-size: 7vw;
         }
     }
 }
